# sdk

./: CMakeLists.txt  SDKUpdateExplain.txt  build_all.sh  mkfirmware.sh
